metrics/local/dingding-webhook.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dingding-webhook
  namespace: monitoring
  labels:
    app: dingding-webhook
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dingding-webhook
  template:
    metadata:
      labels:
        app: dingding-webhook
    spec:
      nodeSelector:
        "shilintan.io/service-type-monitor-metrics": v
      containers:
      - name: dingding-webhook
        image: registry.cn-shanghai.aliyuncs.com/shilintan-public/timonwong_prometheus-webhook-dingtalk:v2.1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8060
        volumeMounts:
          - mountPath: /prometheus-webhook-dingtalk/configs
            name: dingding-webhook
        args:
          - --config.file=/prometheus-webhook-dingtalk/configs/config.yml
          - --log.level=debug
        resources:
          requests:
            cpu: 50m
            memory: 100Mi
            ephemeral-storage: 1Gi
          limits:
            cpu: 2000m
            memory: 2Gi
            ephemeral-storage: 30Gi
      volumes:
        - name: dingding-webhook
          configMap:
            name: dingding-webhook

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dingding-webhook
  name: dingding-webhook
  namespace: monitoring
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8060
  selector:
    app: dingding-webhook
